--- a/TicketBooking/packages.config
+++ b/TicketBooking/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Dapper" version="2.0.78" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="QRCoder" version="1.4.1" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.113.6" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.113.6" targetFramework="net472" />
