--- a/TicketBooking/TicketBooking.csproj
+++ b/TicketBooking/TicketBooking.csproj
@@ -136,6 +136,12 @@
     <Compile Include="Views\BookingTicketForm.Designer.cs">
       <DependentUpon>BookingTicketForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\SuccessCheckInForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SuccessCheckInForm.Designer.cs">
+      <DependentUpon>SuccessCheckInForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\TakePictureForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,6 +169,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ScanQRCode.resx">
       <DependentUpon>ScanQRCode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SuccessCheckInForm.resx">
+      <DependentUpon>SuccessCheckInForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\TakePictureForm.resx">
       <DependentUpon>TakePictureForm.cs</DependentUpon>
@@ -210,6 +219,7 @@
     <Content Include="bin\Debug\ZedGraph.license.txt" />
     <Content Include="bin\Debug\zlib.net.dll" />
     <Content Include="bin\Debug\zlib.net.license.txt" />
+    <None Include="Resources\NoAvatar.png" />
     <None Include="Resources\camera.png" />
     <None Include="Resources\Save.png" />
   </ItemGroup>
