--- a/TicketBooking/TicketBooking.csproj
+++ b/TicketBooking/TicketBooking.csproj
@@ -124,6 +124,12 @@
     <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Loading.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Loading.Designer.cs">
+      <DependentUpon>Loading.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\ScanQRCode.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -166,6 +172,9 @@
     </Compile>
     <EmbeddedResource Include="Views\BookingTicketForm.resx">
       <DependentUpon>BookingTicketForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Loading.resx">
+      <DependentUpon>Loading.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\ScanQRCode.resx">
       <DependentUpon>ScanQRCode.cs</DependentUpon>
@@ -219,6 +228,7 @@
     <Content Include="bin\Debug\ZedGraph.license.txt" />
     <Content Include="bin\Debug\zlib.net.dll" />
     <Content Include="bin\Debug\zlib.net.license.txt" />
+    <None Include="Resources\Loading.gif" />
     <None Include="Resources\NoAvatar.png" />
     <None Include="Resources\camera.png" />
     <None Include="Resources\Save.png" />
